# ci-cd_testing

./: README.md  pyproject.toml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml
src/my_package/: main.py
tests/: test_code.py
